--- a/Transfer_Learning/cvpr_2nd_submission/transfer_learning.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/transfer_learning.tex
@@ -47,11 +47,7 @@ We now formally define 3 kinds of transfer learning problems, namely,
 and \emph{reasoning transfer}.
 These are illustrated in~\cref{fig:taskonomy} using representative examples from CLEVR-CoGenT and COG datasets that are particularly suited for experimental
 investigations of transfer learning.
-In \cref{sec:experiments}, we detail the performance of
-SAMNet for each of these 3 kinds, using the CLEVR-CoGenT dataset
-for feature transfer, the COG dataset for temporal transfer, and finally
-both datasets for reasoning transfer, with appropriate baseline comparisons.
-
+%In \cref{sec:experiments}, we detail the performance of SAMNet for each of these 3 kinds, using the CLEVR-CoGenT dataset for feature transfer, the COG dataset for temporal transfer, and finally both datasets for reasoning transfer, with appropriate baseline comparisons.
 Let $\cQ$ and $\cV$ denote the set of questions and visual inputs, respectively.
 \begin{description}
 	%\compresslist % used to reduce spacing
