new SAMNETmodel fig

--- a/Transfer_Learning/cvpr_2nd_submission/cvpr_paper_main.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/cvpr_paper_main.tex
@@ -7,7 +7,7 @@
 \usepackage[font=small]{subcaption}
 \captionsetup[figure]{skip=5pt}
 \captionsetup[table]{skip=5pt}
-%\setlength{\belowcaptionskip}{-15pt}  % reduce padding below figure
+\setlength{\belowcaptionskip}{-15pt}  % reduce padding below figure
 \usepackage{amsmath, amssymb, amsfonts,bm}
 \usepackage{amsthm}
 
