added back pointer to experiments in TL after referring to Fig 2.

--- a/Transfer_Learning/cvpr_2nd_submission/transfer_learning.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/transfer_learning.tex
@@ -45,8 +45,8 @@ This entails studying transfer learning between families of tasks which requires
 We now formally define 3 kinds of transfer learning problems, namely,
 \emph{feature transfer}, \emph{temporal transfer},
 and \emph{reasoning transfer}.
-These are illustrated in~\cref{fig:taskonomy} using representative examples from CLEVR-CoGenT and COG datasets that are particularly suited for experimental
-investigations of transfer learning.
+These are illustrated in~\cref{fig:taskonomy} using representative examples from CLEVR-CoGenT and COG. These datasets were chosen because they 
+are particularly suited for experimental investigations of transfer learning described in the following section.
 %In \cref{sec:experiments}, we detail the performance of SAMNet for each of these 3 kinds, using the CLEVR-CoGenT dataset for feature transfer, the COG dataset for temporal transfer, and finally both datasets for reasoning transfer, with appropriate baseline comparisons.
 Let $\cQ$ and $\cV$ denote the set of questions and visual inputs, respectively.
 \begin{description}
