reasoning transfer moved to a separate file
Signed-off-by: ibm <tkornuta.ibm@gmail.com>

--- a/Transfer_Learning/cvpr_2nd_submission/cvpr_paper_main.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/cvpr_paper_main.tex
@@ -156,6 +156,7 @@ Transfer learning has become the de facto standard in computer vision and natura
 \input{transfer_learning}
 
 \input{experiments}
+\input{experiments_reasoning_transfer}
 
 \input{summary}
 
