reasoning transfer - COG
Signed-off-by: ibm <tkornuta.ibm@gmail.com>

--- a/Transfer_Learning/cvpr_2nd_submission/cvpr_paper_main.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/cvpr_paper_main.tex
@@ -124,7 +124,7 @@
 \author{%
 	T.S. Jayram\thanks{IBM Research AI.} \and
 	Vincent Marois\footnotemark[2] \and
-	Tomasz Kornuta\thanks{Nvidia Research.} \and
+	Tomasz Kornuta\thanks{NVIDIA.} \and
 	Vincent Albouy\thanks{} \and
 	Emre Sevgen\thanks{Citrine Informatics.}  \and
 	Ahmet Ozcan\footnotemark[2]
